[package]
name = "packet_redirector"
version = "0.1.0"
authors = ["Kenneth Price <51425692+SneakyLift@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
tokio = {version = "1.4.0", features = ["full"] }